--- a/dataflow-effects.cabal
+++ b/dataflow-effects.cabal
@@ -15,12 +15,11 @@ maintainer:          dom.orchard@gmail.com
 -- copyright:
 -- category:
 build-type:          Simple
-extra-source-files:  CHANGELOG.md
 
 library
   exposed-modules:     Main
   -- other-modules:
   other-extensions:    KindSignatures, TypeFamilies, ConstraintKinds, PolyKinds, MultiParamTypeClasses, RebindableSyntax, DataKinds, TypeOperators, FlexibleInstances, UndecidableInstances, AllowAmbiguousTypes, FlexibleContexts, FunctionalDependencies, ScopedTypeVariables
-  build-depends:       base >=4.12 && <4.13, ghc-prim >=0.5 && <0.6, mtl >=2.2 && <2.3, transformers >=0.5 && <0.6, type-level-sets >=0.8 && <0.9, constraints >=0.10 && <0.11
+  build-depends:       base >=4.12, ghc-prim >=0.5, mtl >=2.2 && <2.3, transformers >=0.5 && <0.6, type-level-sets >=0.8 && <0.9, constraints >=0.10
   hs-source-dirs:      src
   default-language:    Haskell2010
